# af-carbon-dash

./: .gitignore  Dockerfile  Makefile  README.md  carbon_dash.py  model_service_documentation.md  pyproject.toml
.github/workflows/: cd.yml
.streamlit/: secrets.toml
conf/base/: FVSVariant_presets.json  carbon_model_coefficients.json  help_text.json  proforma_presets.json  protocol_rules.json  species_labels.json  supported_variant_locations.yml  workflow_steps.json
data/: FVSVariant_presets.json
data/FVSVariantMap20210525/: FVS_Variants_and_Locations_4326.dbf  FVS_Variants_and_Locations_4326.shx
model_service/: main.py  model.py  schemas.py
model_service/quarto/: _brand.yml  _quarto.yml  brand_yml.py  report.ipynb  requirements.txt  typst_template.typ
pages/: 0_home.py  1_5_map_planting.py  1_planting.py  1_project_builder.py  2_carbon_est.py  2_faq.py  3_credits.py  4_map.py  5_faq.py  6_cog_test.py
quarto/: README.md  _brand.yml  _quarto.yml  gen-reports.py  protocol_summary.md  report.ipynb  typst_template.typ  useful_links.txt
quarto/reports/: combined_report.html  protocol_summary.csv  report.html  year_summary.csv
quarto/reports/report_files/libs/bootstrap/: bootstrap-7b6698407a311d81bff83cafc6ff7228.min.css
quartoapi/: main.py  schemas.py
scripts/: convertCRS.py  convertGeoJSON.py  convertGeoTiffCOG.py  downloadFile.py  register_fvs_models_mlflow.py
utils/: config.py  quarto_config.py
utils/functions/: helper.py  mlflow_models.py  models.py  plant_design.py  site_select.py  statefulness.py
