[project]
name = "af-carbon-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "earthengine-api>=1.6.4",
    "folium>=0.20.0",
    "geemap>=0.36.1",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "streamlit>=1.48.1",
    "streamlit-folium>=0.25.1",
]
