[project]
name = "af-carbon-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocache>=0.12.3",
    "altair>=5.5.0",
    "earthengine-api>=1.6.4",
    "fastapi>=0.119.1",
    "folium>=0.20.0",
    "geemap>=0.36.1",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "numpy-financial>=1.0.0",
    "pyyaml>=6.0.2",
    "rasterio>=1.4.3",
    "requests>=2.32.4",
    "rio-tiler>=7.9.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "streamlit>=1.48.1",
    "streamlit-folium>=0.25.1",
    "titiler-core>=0.24.2",
    "titiler[all]>=0.24.2",
    "uvicorn>=0.38.0",
]
