[project]
name = "af-carbon-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "earthengine-api>=1.6.4",
    "fastapi>=0.124.4",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geemap>=0.36.1",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "numpy-financial>=1.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "streamlit>=1.48.1",
    "streamlit-folium>=0.25.1",
]
